Fix some bugs for logo not shwoing uo on share and parents not showing up on userfeed favorites

--- a/client/src/views/stylesheets/CardPage.scss
+++ b/client/src/views/stylesheets/CardPage.scss
@@ -1,7 +1,4 @@
-// CardPage.scss
-
 .solo-card-container {
-  zoom: 100%;
   display: flex; 
   justify-content: center;
   align-items: center;
